Added info about hasanabi.org and added deploy file to .gitignore

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,6 @@
 @()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@main("Welcome to hasanabi.org!") {
+  <h1>Welcome to hasanabi.org!</h1>
+  <h2>WEBSITE STILL UNDER CONSTRUCTION ResidentSleeper</h2>
 }
