Added header, footer, and twitter embed.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,4 +3,5 @@
 @main("Welcome to hasanabi.org!") {
   <h1>Welcome to hasanabi.org!</h1>
   <h2>WEBSITE STILL UNDER CONSTRUCTION ResidentSleeper</h2>
+  @twitter.render()
 }
