--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,16 +9,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        @* Here's where we render the page title `String`. *@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
     </head>
     <body>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
+        <header>
+            <a href="/">Main</a>
+            <a href="/stream">Stream</a>
+            <a href="/community">Community</a>
+            <a href="/art">Art</a>
+            <a href="/merch">Merch</a>
+            <a href="/theory">Theory</a>
+            <a href="/login">Login</a>
+        </header>
         @content
 
-        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+        <footer>
+            This website is created and maintained by the proletariat. Hasan Piker or
+            other capital owners of the hasanabi brand may or maynote endorse this website.
+        </footer>
+
+        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript">
+
+        </script>
     </body>
 </html>
