--- a/app/views/twitter.scala.html
+++ b/app/views/twitter.scala.html
@@ -1,7 +1,11 @@
+<div class="twitter-wrapper">
 <a class="twitter-timeline"
    href="https://twitter.com/hasanthehun?ref_src=twsrc%5Etfw"
-    data-chrome="nofooter noborders"
-    data-theme="dark">
-    Tweets by Hasanabi
+   data-width="600"
+   data-height="800"
+	data-chrome="nofooter noborders"
+	data-theme="dark">
+	Tweets by Hasanabi
 </a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
