Theory page. Added page icon.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main("Welcome to hasanabi.org!") {
+@main("Hasanabi") {
   <h1>Welcome to hasanabi.org!</h1>
   <h2>WEBSITE STILL UNDER CONSTRUCTION ResidentSleeper</h2>
   @twitter.render()
