--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,7 +11,7 @@
 	<head>
 		<title>@title</title>
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-		<link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+		<link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/hasraidSmall.png")">
 	</head>
 	<body>
     <div class="body-wrapper">
