Title improvement. Fixed a typo.

--- a/app/views/theory/theory_page.scala.html
+++ b/app/views/theory/theory_page.scala.html
@@ -55,7 +55,7 @@
 <p>
 	It's worth reminding that this is in no way an exhaustive list of works on
 	leftist theory. The world has seen countless great minds, writing books about
-	subject, both before and after Karl Marx himself.
+	the subject, both before and after Karl Marx himself.
 	If you are still left with questions after reading the works listed above,
 	don't hesitate to
 	ask for help from the community! <a href="/community">Hascord</a> is home to many of the most trained
