--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main("Hasanabi") {
+@main(null) {
   <h1>Welcome to hasanabi.org!</h1>
   <h2>WEBSITE STILL UNDER CONSTRUCTION ResidentSleeper</h2>
   @twitter.render()
