--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,7 +16,7 @@
 	<body>
     <div class="body-wrapper">
     <header>
-      <a href="/">Main</a>
+      <a href="/">Info</a>
       <a href="/stream">Stream</a>
       <a href="/community">Community</a>
       <a href="/art">Art</a>
