Added quote to theory page

--- a/app/views/theory/theory_page.scala.html
+++ b/app/views/theory/theory_page.scala.html
@@ -3,6 +3,13 @@
 @main("Theory") {
 
 <h1>Theory</h1>
+<p>
+	<i>
+		Education is free.
+		Freedoom of education shall be enjoyed under the condition fixed by law
+		and under the supreme control of the state
+	</i>
+</p>
 <h2>Basics</h2>
 <p>
 	A simple guide on where to begin on understanding left values. It is recommended to
