Changed theory text a bit

--- a/app/views/theory/theory_page.scala.html
+++ b/app/views/theory/theory_page.scala.html
@@ -26,13 +26,18 @@
 		Manifesto of the Communist Party
 	</a></li>
 </ul>
-<h2>Long but mandatory</h2>
+<h2>The most holy work</h2>
 <ul>
 	<li>
-		Das Kapital
-		<a href="https://www.marxists.org/archive/marx/works/download/pdf/Capital-Volume-I.pdf">(Volume 1) </a>
-		<a href="https://www.marxists.org/archive/marx/works/download/pdf/Capital-Volume-II.pdf">(Volume 2) </a>
-		<a href="https://www.marxists.org/archive/marx/works/download/pdf/Capital-Volume-III.pdf">(Volume 3) </a>
+		<a href="https://www.marxists.org/archive/marx/works/download/pdf/Capital-Volume-I.pdf">
+			Das Kapital (Volume 1)
+		</a>
+		<a href="https://www.marxists.org/archive/marx/works/download/pdf/Capital-Volume-II.pdf">
+			(Volume 2)
+		</a>
+		<a href="https://www.marxists.org/archive/marx/works/download/pdf/Capital-Volume-III.pdf">
+			(Volume 3)
+		</a>
 	</li>
 </ul>
 <h2>Further reading</h2>
