Added youtube embed, and changed front page to media page.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,12 +16,12 @@
 	<body>
     <div class="body-wrapper">
     <header>
-      <a href="/">Info</a>
+      <a href="/media">Media</a>
       <a href="/stream">Stream</a>
+	    <a href="/theory">Theory</a>
       <a href="/community">Community</a>
       <a href="/art">Art</a>
       <a href="/merch">Merch</a>
-      <a href="/theory">Theory</a>
       <a href="/login">Login</a>
     </header>
     @content
