Footer is now properly at bottom of the page.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,11 +24,15 @@
       <a href="/merch">Merch</a>
       <a href="/login">Login</a>
     </header>
+    <div id="main-content-wrapper">
     @content
     </div>
+    </div>
     <footer>
-      This website is created and maintained by the proletariat. Hasan Piker or
-      other capital owners of the hasanabi brand may or maynote endorse this website.
+	    <div id="footer-content">
+		    This website is created and maintained by the proletariat. Hasan Piker or
+		    other capital owners of the hasanabi brand may or maynote endorse this website.
+	    </div>
     </footer>
 
     <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript">
