--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
 		<link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/hasraidSmall.png")">
 	</head>
-	<body>
+	<body style="background: url(@routes.Assets.versioned("background-images/bg-image-1.jpg")">
     <div class="body-wrapper">
     <header>
       <a href="/media">Media</a>
