--- a/app/views/theory/theory_page.scala.html
+++ b/app/views/theory/theory_page.scala.html
@@ -2,7 +2,9 @@
 
 @main("Theory") {
 
-<h1>Theory</h1>
+<div class="main-header-container">
+	<h1>Theory</h1>
+</div>
 <p>
 	<i>
 		Education is free.
