Code reuse and styling.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -25,7 +25,10 @@
       <a href="/login">Login</a>
     </header>
     <div id="main-content-wrapper">
-    @content
+	    <div class="main-header-container">
+		    <h1>@title</h1>
+	    </div>
+	    @content
     </div>
     </div>
     <footer>
