--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -18,6 +18,10 @@ body {
   margin-top: 0px;
 }
 
+#main-content-wrapper {
+	margin: 8px;
+}
+
 #main-content-wrapper * {
 	background-color: rgba(0,0,0,0.75);
 }
