--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,6 +12,12 @@
 		<title>Hasanabi @if(title != null){- @title}</title>
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
 		<link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/hasraidSmall.png")">
+
+		<!--Bootstrap + jquery-->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
 	</head>
 	<body style="background: url(@routes.Assets.versioned("background-images/bg-image-1.jpg")">
     <div class="body-wrapper">
@@ -20,7 +26,7 @@
       <a href="/stream">Stream</a>
 	    <a href="/theory">Theory</a>
       <a href="/community">Community</a>
-      <a href="/art">Art</a>
+      <a href="/art">Fanart</a>
       <a href="/merch">Merch</a>
       <a href="/login">Login</a>
     </header>
