--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,9 @@
 html {
-	color: white;
 	height 100%;
+}
+
+html > body {
+	color: white;
 }
 
 body {
@@ -23,7 +26,7 @@ body {
 }
 
 #main-content-wrapper > * {
-	background-color: rgba(0,0,0,0.75);
+	background-color: rgba(0,0,0,0.80);
 }
 
 footer {
@@ -42,7 +45,7 @@ header {
 }
 
 header a {
-	padding: 20px;
+	padding: 10px;
   display: inline-block;
 	border-bottom: 3px solid black;
 	font-size: 30px;
@@ -55,6 +58,8 @@ a:link, a:visited {
 
 a:hover, a.active{
 	border-bottom: 3px solid red;
+  color: inherit !important;
+  text-decoration: inherit !important;
 }
 
 .twitter-timeline {
