--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,23 +1,22 @@
-@*
- * This template is called from the `index` template. This template
- * handles the rendering of the page header and body tags. It takes
- * two arguments, a `String` for the title of the page and an `Html`
- * object to insert into the body of the page.
- *@
-@(title: String)(content: Html)
+@(title: String, quote : String = null)(content: Html)
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title>Hasanabi @if(title != null){- @title}</title>
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-		<link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/hasraidSmall.png")">
+		<link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/hasraidSmaller.png")">
 
 		<!--Bootstrap + jquery-->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+
+		<!--Masonry-->
+		<script src="https://cdn.jsdelivr.net/npm/masonry-layout@@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body style="background: url(@routes.Assets.versioned("background-images/bg-image-1.jpg")">
     <div class="body-wrapper">
@@ -31,10 +30,17 @@
       <a href="/login">Login</a>
     </header>
     <div id="main-content-wrapper">
-	    <div class="main-header-container">
-		    <h1>@title</h1>
+	    <div class="row justify-content-start gx-5 m-2" data-masonry='{"percentPosition": true }'>
+		    <div class="main-header-container col-auto col-md-auto dark-bg">
+			    <h1>@title</h1>
+		    </div>
+		    @if(quote != null){
+		    <div class="main-header-container mt-sm-2 col-sm-8 col-md-6 col-lg-4 ms-2 dark-bg">
+			    <p><i>@quote</i></p>
+		    </div>
+		    }
 	    </div>
-	    @content
+      @content
     </div>
     </div>
     <footer>
