--- a/app/views/art/art_page.scala.html
+++ b/app/views/art/art_page.scala.html
@@ -1,8 +1,40 @@
+@import _root_.art.ArtManager
+@import _root_.art.ArtItem
+
 @main("Fanart",
 "The art of any propagandist and agitator consists in his ability to find the best means of influencing any given audience," +
 "by presenting a definite truth, in such a way as to make it most convincing," +
 "most easy to digest, most graphic, and most strongly impressive."
 ) {
-<p>Here you can find art that has been socialized by the party.</p>
-<p>LITERALLY NOTHING</p>
+@masonry_container(){
+
+<div class="col-xs-12 col-md-6 col-lg-4 col-xl-3">
+	<div class="dark-bg p-3">
+		<p>
+			Here you can find art that has been socialized by the party.
+			Use the dates below to navigate.
+		</p>
+		@for((date, items) <- ArtManager.getArtItems()){
+			<p><a href="#@date.toString()-item-container">@date.toString</a></p>
+		}
+	</div>
+</div>
+
+@for((date, items) <- ArtManager.getArtItems()){
+<div id="@date.toString()-item-container" class="col-xs-12 col-md-6 col-lg-4 col-xl-3">
+	<div class="dark-bg p-3">
+		<h3>
+			@date.toString
+		</h3>
+		@for(item <- items){
+		<p>@item.getName()</p>
+		@if(item.getSourceUrl() != null){
+			<img class="community-image" src="@item.getSourceUrl()">
+		}
+		}
+	</div>
+</div>
+}
+
+}
 }
