Login page style.

--- a/app/views/login/login_page.scala.html
+++ b/app/views/login/login_page.scala.html
@@ -1,10 +1,8 @@
-@main("Login") {
-
-<p>
-	<i>
-		A system of licensing and registration
-		is the perfect device to deny gun ownership to the bourgeoisie.
-	</i>
-</p>
-<p>TODO</p>
+@main("Login",
+"A system of licensing and registration" +
+"is the perfect device to deny gun ownership to the bourgeoisie."
+) {
+<div class="col-auto dark-bg p-3">
+	Lmao login for what?
+</div>
 }
