--- a/app/views/merch/merch_page.scala.html
+++ b/app/views/merch/merch_page.scala.html
@@ -1,11 +1,20 @@
-@main("Merch") {
+@main("Merch",
+"When it comes time to hang the capitalists," +
+" they will vie with each other for the rope contract."
+) {
+@masonry_container(){
 
-<p>
-	<i>
-		When it comes time to hang the capitalists,
-		they will vie with each other for the rope contract.
-	</i>
-</p>
-<p>Merchandise used to raise funds for the party.</p>
-<p>LITERALLY NOTHING</p>
+<div class="col-xs-12 col-md-6 col-lg-4 col-xl-3">
+	<div class="dark-bg p-3">
+		<p>Merchandise used to raise funds for the party.</p>
+	</div>
+</div>
+
+<div class="col-xs-12 col-md-6 col-lg-4 col-xl-3">
+	<div class="dark-bg p-3">
+		<p>LITERALLY NOTHING</p>
+	</div>
+</div>
+
+}
 }
