--- a/app/views/stream/stream_page.scala.html
+++ b/app/views/stream/stream_page.scala.html
@@ -1,14 +1,45 @@
 @main("Stream") {
+<div class="row">
+<div class="col-xs-12 col-xl-9">
+		<div id="live-stream-box"></div>
+</div>
+	<div id="twitch-chat-block" class="col-xs-12 col-xl-3" style="min-height: 500px"></div>
+</div>
 
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-<div id="live-stream-box"></div>
 <script type="text/javascript">
-  var options = {
-    width: 900,
-    height: 540,
-    channel: "hasanabi",
-  };
-  var player = new Twitch.Player("live-stream-box", options);
-  player.setVolume(0.5);
+var options = {
+  height: "100%",
+  width: "100%",
+  channel: "hasanabi",
+};
+var player = new Twitch.Player("live-stream-box", options);
+player.setVolume(0.5);
+
+function setHeight(){
+  var streamBox = $("#live-stream-box");
+  var width = streamBox.outerWidth();
+  var height = width * (9.0/16.0);
+  streamBox.outerHeight(height);
+}
+
+function makeChatBox(){
+	var hostname = window.location.hostname;
+	$("#twitch-chat-block").html(
+		'<iframe src="https://www.twitch.tv/embed/hasanabi/chat?darkpopout&parent=' + hostname + '"'
+		+ 'height="100%"'
+		+ 'width="100%">'
+		+ '</iframe>'
+	);
+}
+
+$(document).ready(function() {
+	$("#main-content-wrapper").css("max-width", "100%")
+	setHeight();
+	makeChatBox()
+});
+$(window).resize(function(){
+	setHeight();
+});
 </script>
 }
