--- a/app/views/info/twitter.scala.html
+++ b/app/views/info/twitter.scala.html
@@ -1,8 +1,8 @@
 <div class="twitter-wrapper">
 <a class="twitter-timeline"
    href="https://twitter.com/hasanthehun?ref_src=twsrc%5Etfw"
-   data-width="600"
-   data-height="800"
+   data-width="100%"
+   data-height="500"
 	data-chrome="nofooter noborders"
 	data-theme="dark">
 	Tweets by Hasanabi
