--- a/app/views/info/youtube.scala.html
+++ b/app/views/info/youtube.scala.html
@@ -1,4 +1,4 @@
-<iframe width="840" height="473"
+<iframe width="100%" height="500px"
         src="https://www.youtube.com/embed/VfjtbeLMHwE"
         title="YouTube video player"
         frameborder="0"
