--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,6 +6,12 @@
 <html lang="en">
 	<head>
 		<title>Hasanabi @if(title != null){- @title}</title>
+
+		<meta property="og:site_name" content="Hasanabi.org">
+		<meta property="og:title" content="The official unofficial hasanabi website">
+		<meta property="og:description" content="Learn leftism, organize, resist, take over.">
+		<meta property="og:image" content="https://imgur.com/mrjLyTa.png">
+
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
 		<link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/hasraidSmaller.png")">
 
