Added quotes to media and stream pages.

--- a/app/views/stream/stream_page.scala.html
+++ b/app/views/stream/stream_page.scala.html
@@ -1,4 +1,5 @@
-@main("Stream") {
+@main("Stream",
+"The absence of freedom of the press makes all other freedoms illusory.") {
 <div class="row">
 <div class="col-xs-12 col-xl-9">
 		<div id="live-stream-box"></div>
