--- a/app/views/info/index.scala.html
+++ b/app/views/info/index.scala.html
@@ -1,6 +1,6 @@
-@()
-
-@main("Media") {
+@main("Media",
+"The proletarians have nothing to lose but their chains."
++ " They have a world to win. Working men of all countries, unite!"){
 <div class="row justify-content-md-start g-2 mt-2">
 <div class="col-xs-12 col-lg-8">
   @youtube()
