--- a/app/views/info/youtube.scala.html
+++ b/app/views/info/youtube.scala.html
@@ -1,5 +1,5 @@
 <iframe width="100%" height="500px"
-        src="https://www.youtube.com/embed/VfjtbeLMHwE"
+        src="https://www.youtube.com/embed?listType=playlist&list=UUtoaZpBnrd0lhycxYJ4MNOQ"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
