Added contact page

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -55,6 +55,7 @@
 	    <div id="footer-content">
 		    This website is created and maintained by the proletariat. Hasan Piker or
 		    other capital owners of the hasanabi brand may or may not endorse this website.
+		    <p><a href="/contact">contact</a></p>
 	    </div>
     </footer>
 
