--- a/app/views/art/art_page.scala.html
+++ b/app/views/art/art_page.scala.html
@@ -27,10 +27,9 @@
 			@date.toString
 		</h3>
 		@for(item <- items){
-		<p>@item.getName()</p>
-		@if(item.getSourceUrl() != null){
-			<img class="community-image" src="@item.getSourceUrl()">
-		}
+		@if(item.getName() != null){<p>@item.getName()</p>}
+		@if(item.getSourceUrl() != null){<img class="community-image" src="@item.getSourceUrl()">}
+		@if(item.getAuthor() != null){<p>By @item.getAuthor()</p>}
 		}
 	</div>
 </div>
