--- a/app/views/info/youtube.scala.html
+++ b/app/views/info/youtube.scala.html
@@ -1,7 +1,11 @@
-<iframe width="100%" height="500px"
-        src="https://www.youtube.com/embed?listType=playlist&list=UUtoaZpBnrd0lhycxYJ4MNOQ"
+@(playlistId : String)
+
+<div class="youtube-video-container">
+<iframe class="youtube-video"
+        src="https://www.youtube.com/embed?listType=playlist&list=@playlistId"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
+</div>
