--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -94,3 +94,18 @@ h1 {
 #live-stream-box{
 	width: 100%;
 }
+
+.youtube-video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.youtube-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
