--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -89,6 +89,14 @@ h1 {
 .community-image{
 	width: 100%;
 	display: block;
+	transition:transform 0.35s;
+}
+
+@media (min-width: 1200px) {
+	img:hover {
+	    -webkit-transform:scale(1.5);
+	    transform:scale(1.5);
+	}
 }
 
 #live-stream-box{
