--- a/app/views/community/community_page.scala.html
+++ b/app/views/community/community_page.scala.html
@@ -21,7 +21,7 @@
   </a>
 }
 @theory_item_container(){
-  <a href="https://www.reddit.com/r/okbuddyhasan//">
+  <a href="https://www.reddit.com/r/okbuddyhasan/">
     <h2>Forbidden - Do not click</h2>
     <img class="community-image" alt="Reddit" src="@routes.Assets.versioned("images/basketball.png")">
   </a>
