--- a/app/views/art/art_page.scala.html
+++ b/app/views/art/art_page.scala.html
@@ -22,7 +22,7 @@
 </div>
 
 @for((date, items) <- ArtManager.getArtItems()){
-<div id="@date.toString()-item-container" class="col-xs-12 col-md-6 col-xl-4">
+<div id="@date.toString()-item-container" class="col-xs-12 col-md-6 col-xl-4 hover-image-wrapper">
 	<div class="dark-bg p-3">
 		<h3>
 			@date.toString
