--- a/app/views/theory/theory_item_container.scala.html
+++ b/app/views/theory/theory_item_container.scala.html
@@ -1,5 +1,5 @@
 @()(content : Html)
-<div class="col-xs-12 col-md-6 col-lg-4 col-xl-3">
+<div class="col-xs-12 col-md-6 col-lg-4 col-xl-3 hover-image-wrapper">
 	<div class="dark-bg p-3">
 		@content
 	</div>
